fix: set stacking context and z-index

--- a/src/components/lyne-autocomplete/styles/lyne-autocomplete.component.scss
+++ b/src/components/lyne-autocomplete/styles/lyne-autocomplete.component.scss
@@ -13,6 +13,10 @@
   @include mq($from: medium) {
     --input-height: 56; // TODO Design Token??
   }
+
+  position: relative;
+  z-index: 0;
+
 }
 
 .autocomplete {
